--- a/hopenstack.cabal
+++ b/hopenstack.cabal
@@ -21,6 +21,8 @@ Library
   Build-Depends:       base >= 4.7 && < 4.8
                      , aeson >= 0.8 && < 0.9
                      , text >= 1.2 && < 1.3
+                     , lens >= 4.7 && < 4.8
+                     , wreq >= 0.3 && < 0.4
   Hs-Source-Dirs:      src
   Default-Language:    Haskell2010
   Ghc-Options:         -Wall
