--- a/hopenstack.cabal
+++ b/hopenstack.cabal
@@ -23,9 +23,10 @@ Library
                      , text >= 1.2 && < 1.3
                      , lens >= 4.7 && < 4.8
                      , wreq >= 0.3 && < 0.4
+                     , bytestring >= 0.10 && < 0.11
   Hs-Source-Dirs:      src
   Default-Language:    Haskell2010
-  Ghc-Options:         -Wall
+  Ghc-Options:         -Wall -Werror
 
 Executable demo
   Main-Is:             demo.hs
@@ -33,4 +34,4 @@ Executable demo
                      , text >= 1.2 && < 1.3
                      , hopenstack
   Default-Language:    Haskell2010
-  Ghc-Options:         -Wall
+  Ghc-Options:         -Wall -Werror
