--- a/hopenstack.cabal
+++ b/hopenstack.cabal
@@ -24,6 +24,7 @@ Library
                      , lens >= 4.7 && < 4.8
                      , wreq >= 0.3 && < 0.4
                      , bytestring >= 0.10 && < 0.11
+                     , exceptions >= 0.6 && < 0.7
   Hs-Source-Dirs:      src
   Default-Language:    Haskell2010
   Ghc-Options:         -Wall -Werror
